--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -5,7 +5,7 @@
    "id": "42e23c21",
    "metadata": {},
    "source": [
-    "# TurkishSpamFilterEnhancement-NLP"
+    "# EDA: TurkishSpamFilterEnhancement-NLP"
    ]
   },
   {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55cfbff0",
+   "id": "4bee933d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55892a7d",
+   "id": "1f0c266b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd88320a",
+   "id": "87f14513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6276b235",
+   "id": "6673e6ae",
    "metadata": {},
    "source": [
     "## Analysis\n",
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0418c4e7",
+   "id": "cb036bb4",
    "metadata": {},
    "outputs": [],
    "source": []
